--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,5 @@ script:
     - cd stage
     - ../bootstrap.bash
     - ./blueprint.bash
-    - diff -us ../build.ninja.in .bootstrap/bootstrap.ninja.in
+    - diff -us ../build.ninja.in .minibootstrap/build.ninja.in
     - ../tests/test.sh
