--- a/.travis.yml
+++ b/.travis.yml
@@ -23,3 +23,4 @@ script:
     - ./blueprint.bash
     - diff -us ../build.ninja.in .minibootstrap/build.ninja.in
     - ../tests/test.sh
+    - ../tests/test_tree_tests.sh
