Clean up unnecessary dependencies
Other than cleaning up the code, the only change in behavior is to run
the docs build in parallel with the primary builder, saving about a
second on a Soong bootstrap (10s -> 9s).

Change-Id: Iaff51d6d1a37af842f294f12db11d5774d48d440

--- a/build.ninja.in
+++ b/build.ninja.in
@@ -270,9 +270,7 @@ default ${g.bootstrap.BinDir}/minibp
 # Factory:   github.com/google/blueprint/bootstrap.newSingletonFactory.func1
 
 build ${g.bootstrap.buildDir}/.bootstrap/build.ninja: g.bootstrap.build.ninja $
-        ${g.bootstrap.srcDir}/Blueprints | ${builder} $
-        ${g.bootstrap.BinDir}/gotestmain ${g.bootstrap.BinDir}/gotestrunner $
-        ${g.bootstrap.BinDir}/minibp ${g.bootstrap.srcDir}/Blueprints
+        ${g.bootstrap.srcDir}/Blueprints | ${builder}
     builder = ${g.bootstrap.BinDir}/minibp
     extra = --build-primary
 default ${g.bootstrap.buildDir}/.bootstrap/build.ninja
